--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "npm": "^10.8.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
